--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
   - sbt ++$TRAVIS_SCALA_VERSION -jvm-opts travis/jvmopts clean coverage test coverageReport makeSite
 jdk:
     - oraclejdk8
-
+dist: trusty
 sudo: false
 
 cache:
